--- a/templates/404.html
+++ b/templates/404.html
@@ -8,5 +8,6 @@
 	<div class="w-layout-grid grid">
 		<h1 class="heading-2">404</h1>
 		<img src="https://i.ibb.co/5L5qKfd/pigcake.jpg"/>
-        <p class="paragraph">Someone ate all the tiramisu... is this a broken link?</p>
-	</div>
+        <p class="paragraph">Someone ate all the tiramisu... is this a broken link? <a href='/'>Back</a>
+		</div></p>
+		
