MAYBE STABLE - 404.css added, ac last

--- a/templates/404.html
+++ b/templates/404.html
@@ -2,7 +2,7 @@
 <head>
 	<title>404 - All the tiramisu is gone!</title>
 	<meta content="width=device-width, initial-scale=1" name="viewport"/>
-	<link href="https://uploads-ssl.webflow.com/601fae68d9d9616ae6ee46da/css/fourohfour.webflow.10cf654aa.css" rel="stylesheet" type="text/css"/>
+	<link href="{{ url_for('static', filename='404.css') }}" rel="stylesheet" type="text/css">
 </head>
 <body>
 	<div class="w-layout-grid grid">
