--- a/templates/index.html
+++ b/templates/index.html
@@ -1,21 +1,21 @@
-<!DOCTYPE html>
-<link href="{{ url_for('static', filename='style.css') }}" rel="stylesheet" type="text/css">
+<link href="{{ url_for('static', filename='index.css') }}" rel="stylesheet" type="text/css">
 <link rel="shortcut icon" type="image/jpg" href="https://i.ibb.co/sw3P3zZ/tiramis2.png"/>
 
 <html>
     <title>Tiramisu - Name History and Hypixel Stats</title>
 <head>
-	<h1>This is a test</h1>
-	<p>This is where the UUID goes<br>Tiramisu by literaiiy (v0.01 Zeta)</p>
+
+<body>
+	<h1>Tiramisu by floraphile - index.html - v0.01alpha  </h1>
 	<hr>
-	</table>
 	<form action="/" method="POST">
 		<input type="text" name="content" id="content">
 		<input type="submit" value ="Search">
 	</form>
 	<hr>
 </body>
-	<footer>
-		Copyright 2021 literaiiy. All rights reserved.
-	</footer>
+
+<footer>
+	Copyright 2021 floraphile. All rights reserved.
+</footer>
 </html>
