--- a/static/index.css
+++ b/static/index.css
@@ -13,3 +13,10 @@ table {
     margin-left: auto;
     margin-right: auto;
 }
+
+.logo {
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0; 
+    background-color: honeydew;
+}
