--- a/templates/base.html
+++ b/templates/base.html
@@ -1,18 +1,19 @@
-<link href="{{ url_for('static', filename='base.css') }}" rel="stylesheet" type="text/css">
+{% extends "index.html" %}
 
-<title>Profile for {{ displayname }} | Tiramisu</title>
 <link rel="shortcut icon" type="image/jpg" href="https://i.ibb.co/sw3P3zZ/tiramis2.png"/>
 <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@500&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Meddon&display=swap" rel="stylesheet">
 
+{% block head %}
+<title>Profile for {{ displayname }} | Tiramisu</title>
+<link href="{{ url_for('static', filename='base.css') }}" rel="stylesheet" type="text/css">
 <!--- HEADER --->
 <header>
-    <div class="logo">
-        <a href='/'><img src='https://gist.githubusercontent.com/literaiiy/29ee460b0eff572d439688d0236e6382/raw/3c289102814fab69f09bb51df0cc88e6afe16341/tiramisulogo.svg' alt="Tiramisu Logo" height='5%' width='auto'></a>
-    </div>
+{% endblock %}
 
+{% block content %}
 <!--- SUBTITLE --->
 </header>
 <body>
@@ -71,133 +72,129 @@
 <div class="stats">
 
 <p>
-{% if firstLoginUnix != 1 %}
+<!--- SESSION --->
+{% if currentSession != False %}
+    <p style='color:green;'>Playing <b>{{ currentSession }}</b> - in <b>{{ sessionType }}</b></p>
+{% else %}
+    <p style='color:red;'><b>Offline</b></p>
+{% endif %}
 
-    <!--- SESSION --->
-        {% if currentSession != False %}
-            <p style='color:green;'>Playing <b>{{ currentSession }}</b> - in <b>{{ sessionType }}</b></p>
-        {% else %}
-            <p style='color:red;'><b>Offline</b></p>
-        {% endif %}
+<!--- LEVEL --->
+Level <b>{{ level }} {{ multiplier }}</b> / <b>{{ levelProgress }}%</b> to <b>{{ levelplusone }}</b><br>
 
-    <!--- LEVEL --->
-        Level <b>{{ level }} {{ multiplier }}</b> / <b>{{ levelProgress }}%</b> to <b>{{ levelplusone }}</b><br>
+<!--- KARMA --->
+karma is <b>{{ reqList }}</b><br>
 
-    <!--- KARMA --->
-        karma is <b>{{ reqList }}</b><br>
+<!--- ACHIEVEMENTS --->
+<b>{{ achievements }}</b> achievements for <b>{{ achpot }}</b> achievement points<br>
 
-    <!--- ACHIEVEMENTS --->
-        <b>{{ achievements }}</b> achievements for <b>{{ achpot }}</b> achievement points<br>
+<!--- QUESTS --->
+<b>{{ quests }}</b> quests finished<br></p>
 
-    <!--- QUESTS --->
-        <b>{{ quests }}</b> quests finished<br></p>
+<!--- SENIORITY  --->
+{% if firstLoginUnix > 1357027200 %}
+<b>Hypixel {{ seniority }}</b> - Joined {{ joinedAgoText }} ago<br>
+{% endif %}
 
-    <!--- SENIORITY  --->
-        <p><b>Hypixel {{ seniority }}</b> - Joined {{ joinedAgoText }} ago<br>
+<!--- RANK SENIORITY --->
+{% if 'VIP' in rank or 'MVP' in rank %}
+    {% if '+' in rank %}
+        <span class="{{ rankcolor }}"><b>[{{ rank.replace('+','') }}<span class="{{ pluscolor }}">+</span>]</b></span> bought <b>{{ boughtPastTime }}</b> - <b>{{ boughtPastRank }}</b> ago
+    {% elif boughtPastRank != 0 %}
+        <span class="{{ rankcolor }}"><b>[{{ rank }}]</b></span> bought <b>{{ boughtPastTime }}</b> - <b>{{ boughtPastRank }}</b> ago
+    {% endif %}
+{% endif %}
+<br>
 
-    <!--- RANK SENIORITY --->
-        {% if 'VIP' in rank or 'MVP' in rank %}
-            {% if '+' in rank %}
-                <span class="{{ rankcolor }}"><b>[{{ rank.replace('+','') }}<span class="{{ pluscolor }}">+</span>]</b></span> bought <b>{{ boughtPastTime }}</b> - <b>{{ boughtPastRank }}</b> ago
-            {% elif boughtPastRank != 0 %}
-                <span class="{{ rankcolor }}"><b>[{{ rank }}]</b></span> bought <b>{{ boughtPastTime }}</b> - <b>{{ boughtPastRank }}</b> ago
-            {% endif %}
-        {% endif %}
-        <br>
-</p>
 <!--- FIRST/LAST LOGIN --->
 <p>
-    {% if lastLogoutUnix != 1 %}
-        Last logout: <b>{{ lastLogout }}</b>
-    {% endif %}
-    <br>
-    {% if lastLoginUnix != 1 %}
-        Last login: <b>{{ lastLogin }}</b>
-    {% endif %}
-    <br>
-    {% if firstLoginUnix != 1 %}
-        First login: <b>{{ firstLogin }}</b>
-    {% endif %}
+{% if lastLogoutUnix != 1 %}
+    Last logout: <b>{{ lastLogout }}</b>
+{% endif %}
+<br>
+{% if lastLoginUnix != 1 %}
+    Last login: <b>{{ lastLogin }}</b>
+{% endif %}
+<br>
+{% if firstLoginUnix != 1 %}
+    First login: <b>{{ firstLogin }}</b>
+{% endif %}
 </p>
 
 <!--- SOCIAL MEDIA --->
-    {% if twitter != [] %}
-        <span class="twitter"><b>Twitter: </b></span><a href='{{ twitter[1] }}'>@{{ twitter[0] }}</a><br>
-    {% endif %}
-    {% if instagram != [] %}
-        <span class="instagram"><b>Instagram: </b></span><a href='{{ instagram[1] }}'>@{{ instagram[0] }}</a><br>
-    {% endif %}
-    {% if twitch != [] %}
-        <span class="twitch"><b>Twitch: </b></span><a href='{{ twitch[1] }}'>@{{ twitch[0] }}</a><br>
-    {% endif %}
-    {% if discord != '' and 'discord.gg' not in discord %}
-        <span class="discord"><b>Discord:</b></span> {{ discord }}<br>
-    {% elif 'https://discord.gg' in discord or 'http://discord.gg' in discord %}
-        <span class="discord"><b>Discord:</b></span> <a href='{{ discord }}'>{{ discord }}</a><br>
-    {% elif 'discord.gg' in discord %}
-        <span class="discord"><b>Discord:</b></span> <a href='https://{{ discord }}'>{{ discord }}</a><br>
-    {% endif %}
-    {% if hypixelForums != [] %}
-        <span class="hypixelForums"><b>Hypixel Forums:</b></span> <a href='{{ hypixelForums[1] }}'>@{{ hypixelForums[0] }}</a><br>
-    {% endif %}
-    {% if youtube != [] %}
-        <span class="youtube"><b>YouTube: </b></span><a href='{{ youtube[1] }}'>{{ youtube[0] }}</a><br>
-    {% endif %}
+{% if twitter != [] %}
+    <span class="twitter"><b>Twitter: </b></span><a href='{{ twitter[1] }}'>@{{ twitter[0] }}</a><br>
+{% endif %}
+{% if instagram != [] %}
+    <span class="instagram"><b>Instagram: </b></span><a href='{{ instagram[1] }}'>@{{ instagram[0] }}</a><br>
+{% endif %}
+{% if twitch != [] %}
+    <span class="twitch"><b>Twitch: </b></span><a href='{{ twitch[1] }}'>@{{ twitch[0] }}</a><br>
+{% endif %}
+{% if discord != '' and 'discord.gg' not in discord %}
+    <span class="discord"><b>Discord:</b></span> {{ discord }}<br>
+{% elif 'https://discord.gg' in discord or 'http://discord.gg' in discord %}
+    <span class="discord"><b>Discord:</b></span> <a href='{{ discord }}'>{{ discord }}</a><br>
+{% elif 'discord.gg' in discord %}
+    <span class="discord"><b>Discord:</b></span> <a href='https://{{ discord }}'>{{ discord }}</a><br>
+{% endif %}
+{% if hypixelForums != [] %}
+    <span class="hypixelForums"><b>Hypixel Forums:</b></span> <a href='{{ hypixelForums[1] }}'>@{{ hypixelForums[0] }}</a><br>
+{% endif %}
+{% if youtube != [] %}
+    <span class="youtube"><b>YouTube: </b></span><a href='{{ youtube[1] }}'>{{ youtube[0] }}</a><br>
+{% endif %}
 
 <!--- SKYWARS STATS --->
-    <h2>SkyWars</h2>
-    <table>
-        <tbody>
-        <tr>
-            <td>
-                <b>{{ swGamesPlayed }}</b> games played <br>
-                <b>{{ swGamesQuit }}</b> games quit <br>
-                <b>{{ swKills }}</b> kills - <i>{{ swHeadDesc }}</i><br>
-                <b>{{ swDeaths }}</b> deaths <br>
-                <b>{{ swKD }}</b> K/D <br>
-                <b>{{ swAssists }}</b> assists <br>
-                <b>{{ swWins }}</b> wins<br>
-                <b>{{ swLosses }}</b> losses <br>
-                <b>{{ swWL }}</b> W/L - <b>{{ swWinRate }}%</b> win rate <br>
-                <b>{{ swSurvived }}</b> players survived <br>
-            </td>
-        </tr>
-        <tr>
-            <td>
-                <b>{{ swWinstreak }}</b> winstreak <br>
-                <b>{{ swSouls }}</b> souls <br>
-                <b>{{ swHeads }}</b> heads <br>
-                <b>{{ swCoins }}</b> coins <br>
-                <b>{{ swBlocks }}</b> blocks broken <br>
-                <b>{{ swEggs }}</b> eggs thrown <br>
-                <b>{{ swArrowsShot }}</b> arrows shot, <b>{{ swArrowsHit }}</b> arrows hit - <b>{{ swArrowRate }}%</b> hit rate<br>
-                <b></b>Fastest win: <b>{{ swFastestWin }}</b> <br>
-                <b>{{ swChestsOpened }}</b> chests opened
-            </td>
-        </tr>
-        </tbody>
-    </table>
+<h2>SkyWars</h2>
+<table>
+    <tbody>
+    <tr>
+        <td>
+            <b>{{ swGamesPlayed }}</b> games played <br>
+            <b>{{ swGamesQuit }}</b> games quit <br>
+            <b>{{ swKills }}</b> kills - <i>{{ swHeadDesc }}</i><br>
+            <b>{{ swDeaths }}</b> deaths <br>
+            <b>{{ swKD }}</b> K/D <br>
+            <b>{{ swAssists }}</b> assists <br>
+            <b>{{ swWins }}</b> wins<br>
+            <b>{{ swLosses }}</b> losses <br>
+            <b>{{ swWL }}</b> W/L - <b>{{ swWinRate }}%</b> win rate <br>
+            <b>{{ swSurvived }}</b> players survived <br>
+        </td>
+    </tr>
+    <tr>
+        <td>
+            <b>{{ swWinstreak }}</b> winstreak <br>
+            <b>{{ swSouls }}</b> souls <br>
+            <b>{{ swHeads }}</b> heads <br>
+            <b>{{ swCoins }}</b> coins <br>
+            <b>{{ swBlocks }}</b> blocks broken <br>
+            <b>{{ swEggs }}</b> eggs thrown <br>
+            <b>{{ swArrowsShot }}</b> arrows shot, <b>{{ swArrowsHit }}</b> arrows hit - <b>{{ swArrowRate }}%</b> hit rate<br>
+            <b></b>Fastest win: <b>{{ swFastestWin }}</b> <br>
+            <b>{{ swChestsOpened }}</b> chests opened
+        </td>
+    </tr>
+    </tbody>
+</table>
+<p>
+    <b>{{ swExp }}</b> SkyWars experience <br>
+    <b><span class="{{ swPrestigeColor }}">[{{ swLevel }}☆]</b></span>, {{ swPrestige }} Prestige - <span class="{{ swPrestigeColor }}"><b>{{ swToNL }}%</b></span> to <b>{{ swNextLevel }}</b><br>
+<!-- <h3>Head Collection</h3>
     <p>
-        <b>{{ swExp }}</b> SkyWars experience <br>
-        <b><span class="{{ swPrestigeColor }}">[{{ swLevel }}☆]</b></span>, {{ swPrestige }} Prestige - <span class="{{ swPrestigeColor }}"><b>{{ swToNL }}%</b></span> to <b>{{ swNextLevel }}</b><br>
-    <!-- <h3>Head Collection</h3>
-        <p>
-            {% for head in headsCollection %}
-                {{ head['uuid'] }}'s {{ head['sacrifice'] }} head gathered on {{ head['timestamp'] }} in {{ head['mode'] }} <br>
-            {% endfor %} -->
+        {% for head in headsCollection %}
+            {{ head['uuid'] }}'s {{ head['sacrifice'] }} head gathered on {{ head['timestamp'] }} in {{ head['mode'] }} <br>
+        {% endfor %} -->
     </p>
 </div>
 
 <!--- VERSION DETAILS --->
-    <hr>
-    <p>Tiramisu v{{ version }} "{{ codename }}" from {{ tiramisudate }}</p>
-    <p>Flask v{{ flaskver }} from {{ flaskverdate }}</p>
-    <p>Python v{{ pythonver }} from {{ pythonverdate }}</p>
-    {% else %}
-    <p>It doesn't seem like this person has ever played on Hypixel.</p>
-{% endif %}
-
-<!--- FOOTER --->
-<footer>
-    <p>Copyright © 2021 floraphile. All rights reserved.</p>
-</footer>
+<div class="end">
+<hr>
+    <p>Tiramisu v{{ version }} "{{ codename }}" from {{ tiramisudate }} <br>
+    Flask v{{ flaskver }} from {{ flaskverdate }} <br>
+    Python v{{ pythonver }} from {{ pythonverdate }} </p>
+{% endblock %}
+<p>Copyright © 2021 floraphile. All rights reserved. Terms of Service. Privacy Policy.</p>
+</div>
