--- a/templates/index.html
+++ b/templates/index.html
@@ -1,21 +1,23 @@
-<link href="{{ url_for('static', filename='index.css') }}" rel="stylesheet" type="text/css">
-<link rel="shortcut icon" type="image/jpg" href="https://i.ibb.co/sw3P3zZ/tiramis2.png"/>
-
 <html>
-    <title>Tiramisu - Name History and Hypixel Stats</title>
-<head>
+	<link rel="shortcut icon" type="image/jpg" href="https://i.ibb.co/sw3P3zZ/tiramis2.png"/>
 
-<body>
-	<h1>Tiramisu by floraphile - index.html - v0.01alpha  </h1>
-	<hr>
-	<form action="/" method="POST">
-		<input type="text" name="content" id="content">
-		<input type="submit" value ="Search">
-	</form>
-	<hr>
-</body>
+	<div class="logo">
+        <a href='/'><img src='https://gist.githubusercontent.com/literaiiy/29ee460b0eff572d439688d0236e6382/raw/3c289102814fab69f09bb51df0cc88e6afe16341/tiramisulogo.svg' alt="Tiramisu Logo" height='8%' width='auto'></a>
+    </div>
+	{% block head %}
+	<title>Tiramisu - Name History and Hypixel Stats</title>
+	<link href="{{ url_for('static', filename='index.css') }}" rel="stylesheet" type="text/css">
+	{% endblock %}
 
-<footer>
-	Copyright 2021 floraphile. All rights reserved.
-</footer>
+	{% block content %}
+	<body>
+		<hr>
+		<form action="/" method="POST">
+			<input type="text" name="content" id="content">
+			<input type="submit" value ="Search">
+		</form>
+		<hr>
+		<img src='https://i.imgur.com/d8RMyh6.png'>
+	</body>
+	{% endblock %}
 </html>
