--- a/templates/base.html
+++ b/templates/base.html
@@ -19,7 +19,7 @@
 <body>
 
 <!--- USERNAME --->
-    <div class="username">
+<div class="username">
     {% if '+++' in rank %}
         <h2><span class="light_purple"><b>[{{ rank.replace('+++','') }}<span class="mvpaqua">+++</span>]</b></span> {{ displayname }}</h2>
     {% elif '++' in rank %}
@@ -33,160 +33,177 @@
     {% elif 'YOUTUBE' in rank %}
         <h2><span class="{{ rankbracketcolor }}"><b>[</b></span><span class="gray"></span><b>{{ rank }}</b></span><span class="{{ rankbracketcolor }}"><b>]</b></span> {{ displayname }}</h2>
     {% endif %}
-    </div>
-    <p>{{ uuid }}</p>
-
-<!--- NAME HISTORY --->
-    <div style="width:45%;height:25%;line-height:3em;overflow:auto;padding:5px;border:1px solid #000000;margin-left:500px;">
-        <table>
-            <tr>
-                <th>#</th>
-                <th>Name</th> 
-                <th>Time changed</th>
-                <th>Duration had</th>
-            </tr>
-            {% for dict_item in namehis %}
-            <tr>
-                {% for value in dict_item.values() %}
-                    {% if value|int != 0 %}
-                        <td><b>{{ value }}</b></td>
-                    {% elif value == namehis[0]['name'] %}
-                        <td style="color:midnightblue"><a href="/p/{{ value }}" style="text-decoration:none" >{{ value }}</a></td>
-                    {% elif value == namehis[namehis|length-1]['name'] %}
-                        <td style="color:rgb(135, 170, 235)"><a href="/p/{{ value }}" style="text-decoration:none" >{{ value }}</a></td>
-                    {% elif value in dict_item['name'] %}
-                        <td style="color:rgb(107, 137, 221)"><a href="/p/{{ value }}" style="text-decoration:none" >{{ value }}</a></td>
-                    {% else %}
-                        <td>{{ value }}</td>
-                    {% endif %}
-                {% endfor %}
-            </tr>
-            {% endfor %}
-        </table>
-    </div>
-</body>
-
+</div>
+{{ uuid }}
 <hr>
 
-<!------ PLAYER STATS ------>
-<div class="stats">
+<div class="row">
+    <div class="columnA">
+        <!--- NAME HISTORY --->
+        <div style="width:auto;height:25%;line-height:3em;overflow:auto;padding:5px;border:1px solid #000000;margin-left:15%;margin-right:15%">
+                <table>
+                    <tr>
+                        <th>#</th>
+                        <th>Name</th> 
+                        <th>Time changed</th>
+                        <th>Duration had</th>
+                    </tr>
+                    {% for dict_item in namehis %}
+                    <tr>
+                        {% for value in dict_item.values() %}
+                            {% if value|int != 0 %}
+                                <td><b>{{ value }}</b></td>
+                            {% elif value == namehis[0]['name'] %}
+                                <td style="color:midnightblue"><a href="/p/{{ value }}" style="text-decoration:none" >{{ value }}</a></td>
+                            {% elif value == namehis[namehis|length-1]['name'] %}
+                                <td style="color:rgb(135, 170, 235)"><a href="/p/{{ value }}" style="text-decoration:none" >{{ value }}</a></td>
+                            {% elif value in dict_item['name'] %}
+                                <td style="color:rgb(107, 137, 221)"><a href="/p/{{ value }}" style="text-decoration:none" >{{ value }}</a></td>
+                            {% else %}
+                                <td>{{ value }}</td>
+                            {% endif %}
+                        {% endfor %}
+                    </tr>
+                    {% endfor %}
+                </table>
+        </div>
+        </body>
 
-<p>
-<!--- SESSION --->
-{% if currentSession != False %}
-    <p style='color:green;'>Playing <b>{{ currentSession }}</b> - in <b>{{ sessionType }}</b></p>
-{% else %}
-    <p style='color:red;'><b>Offline</b></p>
-{% endif %}
+        <!------ PLAYER STATS ------>
+        <div class="stats">
 
-<!--- LEVEL --->
-Level <b>{{ level }} {{ multiplier }}</b> / <b>{{ levelProgress }}%</b> to <b>{{ levelplusone }}</b><br>
+        <!--- SKYWARS STATS --->
+        <h2>SkyWars</h2>
+        <table>
+            <tbody>
+            <tr>
+                <td>
+                    <b>{{ swGamesPlayed }}</b> games played <br>
+                    <b>{{ swGamesQuit }}</b> games quit <br>
+                    <b>{{ swKills }}</b> kills - <i>{{ swHeadDesc }}</i><br>
+                    <b>{{ swDeaths }}</b> deaths <br>
+                    <b>{{ swKD }}</b> K/D <br>
+                    <b>{{ swAssists }}</b> assists <br>
+                    <b>{{ swWins }}</b> wins<br>
+                    <b>{{ swLosses }}</b> losses <br>
+                    <b>{{ swWL }}</b> W/L - <b>{{ swWinRate }}%</b> win rate <br>
+                    <b>{{ swSurvived }}</b> players survived <br>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <b>{{ swWinstreak }}</b> winstreak <br>
+                    <b>{{ swSouls }}</b> souls <br>
+                    <b>{{ swHeads }}</b> heads <br>
+                    <b>{{ swCoins }}</b> coins <br>
+                    <b>{{ swBlocks }}</b> blocks broken <br>
+                    <b>{{ swEggs }}</b> eggs thrown <br>
+                    <b>{{ swArrowsShot }}</b> arrows shot, <b>{{ swArrowsHit }}</b> arrows hit - <b>{{ swArrowRate }}%</b> hit rate<br>
+                    <b></b>Fastest win: <b>{{ swFastestWin }}</b> <br>
+                    <b>{{ swChestsOpened }}</b> chests opened
+                </td>
+            </tr>
+            </tbody>
+        </table>
+        <p>
+            <b>{{ swExp }}</b> SkyWars experience <br>
+            <b><span class="{{ swPrestigeColor }}">[{{ swLevel }}☆]</b></span>, {{ swPrestige }} Prestige - <span class="{{ swPrestigeColor }}"><b>{{ swToNL }}%</b></span> to <b>{{ swNextLevel }}</b><br>
+        <!-- <h3>Head Collection</h3>
+            <p>
+                {% for head in headsCollection %}
+                    {{ head['uuid'] }}'s {{ head['sacrifice'] }} head gathered on {{ head['timestamp'] }} in {{ head['mode'] }} <br>
+                {% endfor %} -->
+            </p>
+        </div>
+    </div>
+    <div class="columnB">
+<style>
 
-<!--- KARMA --->
-karma is <b>{{ reqList }}</b><br>
+.vl {
+    border-left: 6px solid green;
+    height: 500px;
+}
+</style>
 
-<!--- ACHIEVEMENTS --->
-<b>{{ achievements }}</b> achievements for <b>{{ achpot }}</b> achievement points<br>
+<div class="vl"></div>
 
-<!--- QUESTS --->
-<b>{{ quests }}</b> quests finished<br></p>
+        <!------ PLAYER DESC ------>
+        <div class="desc">
+        <p>
+        <!--- SESSION --->
+        {% if currentSession != False %}
+            <p style='color:green;'>Playing <b>{{ currentSession }}</b> - in <b>{{ sessionType }}</b></p>
+        {% else %}
+            <p style='color:red;'><b>Offline</b></p>
+        {% endif %}
 
-<!--- SENIORITY  --->
-{% if firstLoginUnix > 1357027200 %}
-<b>Hypixel {{ seniority }}</b> - Joined {{ joinedAgoText }} ago<br>
-{% endif %}
+        <!--- LEVEL --->
+        Level <b>{{ level }} {{ multiplier }}</b> / <b>{{ levelProgress }}%</b> to <b>{{ levelplusone }}</b><br>
 
-<!--- RANK SENIORITY --->
-{% if 'VIP' in rank or 'MVP' in rank %}
-    {% if '+' in rank %}
-        <span class="{{ rankcolor }}"><b>[{{ rank.replace('+','') }}<span class="{{ pluscolor }}">+</span>]</b></span> bought <b>{{ boughtPastTime }}</b> - <b>{{ boughtPastRank }}</b> ago
-    {% elif boughtPastRank != 0 %}
-        <span class="{{ rankcolor }}"><b>[{{ rank }}]</b></span> bought <b>{{ boughtPastTime }}</b> - <b>{{ boughtPastRank }}</b> ago
-    {% endif %}
-{% endif %}
-<br>
+        <!--- KARMA --->
+        karma is <b>{{ reqList }}</b><br>
 
-<!--- FIRST/LAST LOGIN --->
-<p>
-{% if lastLogoutUnix != 1 %}
-    Last logout: <b>{{ lastLogout }}</b>
-{% endif %}
-<br>
-{% if lastLoginUnix != 1 %}
-    Last login: <b>{{ lastLogin }}</b>
-{% endif %}
-<br>
-{% if firstLoginUnix != 1 %}
-    First login: <b>{{ firstLogin }}</b>
-{% endif %}
-</p>
+        <!--- ACHIEVEMENTS --->
+        <b>{{ achievements }}</b> achievements for <b>{{ achpot }}</b> achievement points<br>
 
-<!--- SOCIAL MEDIA --->
-{% if twitter != [] %}
-    <span class="twitter"><b>Twitter: </b></span><a href='{{ twitter[1] }}'>@{{ twitter[0] }}</a><br>
-{% endif %}
-{% if instagram != [] %}
-    <span class="instagram"><b>Instagram: </b></span><a href='{{ instagram[1] }}'>@{{ instagram[0] }}</a><br>
-{% endif %}
-{% if twitch != [] %}
-    <span class="twitch"><b>Twitch: </b></span><a href='{{ twitch[1] }}'>@{{ twitch[0] }}</a><br>
-{% endif %}
-{% if discord != '' and 'discord.gg' not in discord %}
-    <span class="discord"><b>Discord:</b></span> {{ discord }}<br>
-{% elif 'https://discord.gg' in discord or 'http://discord.gg' in discord %}
-    <span class="discord"><b>Discord:</b></span> <a href='{{ discord }}'>{{ discord }}</a><br>
-{% elif 'discord.gg' in discord %}
-    <span class="discord"><b>Discord:</b></span> <a href='https://{{ discord }}'>{{ discord }}</a><br>
-{% endif %}
-{% if hypixelForums != [] %}
-    <span class="hypixelForums"><b>Hypixel Forums:</b></span> <a href='{{ hypixelForums[1] }}'>@{{ hypixelForums[0] }}</a><br>
-{% endif %}
-{% if youtube != [] %}
-    <span class="youtube"><b>YouTube: </b></span><a href='{{ youtube[1] }}'>{{ youtube[0] }}</a><br>
-{% endif %}
+        <!--- QUESTS --->
+        <b>{{ quests }}</b> quests finished<br></p>
 
-<!--- SKYWARS STATS --->
-<h2>SkyWars</h2>
-<table>
-    <tbody>
-    <tr>
-        <td>
-            <b>{{ swGamesPlayed }}</b> games played <br>
-            <b>{{ swGamesQuit }}</b> games quit <br>
-            <b>{{ swKills }}</b> kills - <i>{{ swHeadDesc }}</i><br>
-            <b>{{ swDeaths }}</b> deaths <br>
-            <b>{{ swKD }}</b> K/D <br>
-            <b>{{ swAssists }}</b> assists <br>
-            <b>{{ swWins }}</b> wins<br>
-            <b>{{ swLosses }}</b> losses <br>
-            <b>{{ swWL }}</b> W/L - <b>{{ swWinRate }}%</b> win rate <br>
-            <b>{{ swSurvived }}</b> players survived <br>
-        </td>
-    </tr>
-    <tr>
-        <td>
-            <b>{{ swWinstreak }}</b> winstreak <br>
-            <b>{{ swSouls }}</b> souls <br>
-            <b>{{ swHeads }}</b> heads <br>
-            <b>{{ swCoins }}</b> coins <br>
-            <b>{{ swBlocks }}</b> blocks broken <br>
-            <b>{{ swEggs }}</b> eggs thrown <br>
-            <b>{{ swArrowsShot }}</b> arrows shot, <b>{{ swArrowsHit }}</b> arrows hit - <b>{{ swArrowRate }}%</b> hit rate<br>
-            <b></b>Fastest win: <b>{{ swFastestWin }}</b> <br>
-            <b>{{ swChestsOpened }}</b> chests opened
-        </td>
-    </tr>
-    </tbody>
-</table>
-<p>
-    <b>{{ swExp }}</b> SkyWars experience <br>
-    <b><span class="{{ swPrestigeColor }}">[{{ swLevel }}☆]</b></span>, {{ swPrestige }} Prestige - <span class="{{ swPrestigeColor }}"><b>{{ swToNL }}%</b></span> to <b>{{ swNextLevel }}</b><br>
-<!-- <h3>Head Collection</h3>
-    <p>
-        {% for head in headsCollection %}
-            {{ head['uuid'] }}'s {{ head['sacrifice'] }} head gathered on {{ head['timestamp'] }} in {{ head['mode'] }} <br>
-        {% endfor %} -->
-    </p>
+        <!--- SENIORITY  --->
+        {% if firstLoginUnix > 1357027200 %}
+        <b>Hypixel {{ seniority }}</b> - Joined {{ joinedAgoText }} ago<br>
+        {% endif %}
+
+        <!--- RANK SENIORITY --->
+        {% if 'VIP' in rank or 'MVP' in rank %}
+            {% if '+' in rank %}
+                <span class="{{ rankcolor }}"><b>[{{ rank.replace('+','') }}<span class="{{ pluscolor }}">+</span>]</b></span> bought <b>{{ boughtPastTime }}</b> - <b>{{ boughtPastRank }}</b> ago
+            {% elif boughtPastRank != 0 %}
+                <span class="{{ rankcolor }}"><b>[{{ rank }}]</b></span> bought <b>{{ boughtPastTime }}</b> - <b>{{ boughtPastRank }}</b> ago
+            {% endif %}
+        {% endif %}
+        <br>
+
+        <!--- FIRST/LAST LOGIN --->
+        <p>
+        {% if lastLogoutUnix != 1 %}
+            Last logout: <b>{{ lastLogout }}</b>
+        {% endif %}
+        <br>
+        {% if lastLoginUnix != 1 %}
+            Last login: <b>{{ lastLogin }}</b>
+        {% endif %}
+        <br>
+        {% if firstLoginUnix != 1 %}
+            First login: <b>{{ firstLogin }}</b>
+        {% endif %}
+        </p>
+
+        <!--- SOCIAL MEDIA --->
+        {% if twitter != [] %}
+            <span class="twitter"><b>Twitter: </b></span><a href='{{ twitter[1] }}'>@{{ twitter[0] }}</a><br>
+        {% endif %}
+        {% if instagram != [] %}
+            <span class="instagram"><b>Instagram: </b></span><a href='{{ instagram[1] }}'>@{{ instagram[0] }}</a><br>
+        {% endif %}
+        {% if twitch != [] %}
+            <span class="twitch"><b>Twitch: </b></span><a href='{{ twitch[1] }}'>@{{ twitch[0] }}</a><br>
+        {% endif %}
+        {% if discord != '' and 'discord.gg' not in discord %}
+            <span class="discord"><b>Discord: </b></span>@{{ discord }}<br>
+        {% elif 'https://discord.gg' in discord or 'http://discord.gg' in discord %}
+            <span class="discord"><b>Discord :</b></span> <a href='{{ discord }}'>{{ discord }}</a><br>
+        {% elif 'discord.gg' in discord %}
+            <span class="discord"><b>Discord: </b></span> <a href='https://{{ discord }}'>{{ discord }}</a><br>
+        {% endif %}
+        {% if hypixelForums != [] %}
+            <span class="hypixelForums"><b>Hypixel Forums:</b></span> <a href='{{ hypixelForums[1] }}'>@{{ hypixelForums[0] }}</a><br>
+        {% endif %}
+        {% if youtube != [] %}
+            <span class="youtube"><b>YouTube: </b></span><a href='{{ youtube[1] }}'>{{ youtube[0] }}</a><br>
+        {% endif %}
+        </div>
+    </div>
 </div>
 
 <!--- VERSION DETAILS --->
