--- a/templates/index.html
+++ b/templates/index.html
@@ -1,3 +1,4 @@
+<meta charset="UTF-8">
 <html>
 	<link rel="shortcut icon" type="image/jpg" href="https://i.ibb.co/sw3P3zZ/tiramis2.png"/>
 
@@ -20,4 +21,12 @@
 		<img src='https://i.imgur.com/d8RMyh6.png'>
 	</body>
 	{% endblock %}
+
+<div class="end">
+	<hr>
+		<p>Tiramisu <b>v{{ version }} "{{ codename }}"</b> - <b>{{ tiramisudate }}</b> · 
+		Flask <b>v{{ flaskver }}</b> · 
+		Python <b>v{{ pythonver }}</b><p>
+	<p>Copyright © 2021 floraphile. All rights reserved. Terms of Service. Privacy Policy.</p>
+	</div>
 </html>
