--- a/static/base.css
+++ b/static/base.css
@@ -92,7 +92,13 @@ th {
     color:black
 }
 .darkgray{
-    color:darkgray
+    color:gray;
+}
+.gray{
+color: darkgray;
+}
+.lightgray {
+    color:lightgray
 }
 .gold{
     color:#FFAA00
@@ -122,7 +128,7 @@ th {
 }
 
 
- .mvpaqua{
+.mvpaqua{
     color:#55FFFF
 }
 .lime{
@@ -150,8 +156,12 @@ th {
     color:#55FF55
 }
 .yellow{
-    color:#FFFF55
+    color:#ffff00
 }
+.decentyellow {
+    color:#c0c000
+}
+
 .white{
     color:white
 }
@@ -234,11 +244,59 @@ border-radius: 5px;
     clear: both;
 }
 
-.vl {
-    border-left: 1px solid black;
-    height: 50%;
+/* .vl {
+    border-left: 1px double black;
+    height: 30%;
     position: absolute;
     left: 55%;
     margin-left: 1px;
-    top: 35%;
+    top: 25%;
+} */
+
+/* Style the tab */
+.tab {
+overflow: hidden;
+border: 1px solid #ccc;
+background-color: #f1f1f1;
+}
+
+/* Style the buttons that are used to open the tab content */
+.tab button {
+background-color: inherit;
+float: left;
+border: none;
+outline: none;
+cursor: pointer;
+padding: 14px 16px;
+transition: 0.3s;
+}
+
+/* Change background color of buttons on hover */
+.tab button:hover {
+background-color: #ddd;
+}
+
+/* Create an active/current tablink class */
+.tab button.active {
+background-color: #ccc;
+}
+
+/* Style the tab content */
+.tabcontent {
+display: none;
+padding: 6px 12px;
+border: 1px solid #ccc;
+border-top: none;
+}
+
+.swgeneral {
+    width:30%;
+}
+
+.leftsw {
+    width: 15%;
+}
+
+.rightsw {
+    width: 15%;
 }
